// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectEnvironments render active renders empty message 1`] = `
<ProjectEnvironments
  api={
    Client {
      "_chain": [Function],
      "_wrapRequest": [Function],
      "bulkUpdate": [Function],
      "handleRequestError": [Function],
      "hasProjectBeenRenamed": [Function],
    }
  }
  location={
    Object {
      "pathname": "environments/",
    }
  }
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
  routes={Array []}
>
  <div>
    <SentryDocumentTitle
      objSlug="project-slug"
      title="Environments"
    >
      <SideEffect(DocumentTitle)
        title="Environments - project-slug - Sentry"
      >
        <DocumentTitle
          title="Environments - project-slug - Sentry"
        />
      </SideEffect(DocumentTitle)>
    </SentryDocumentTitle>
    <StyledSettingsPageHeading
      noTitleStyles={false}
      tabs={
        <NavTabs
          underlined={true}
        >
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/"
          >
            Environments
          </ListLink>
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/hidden/"
          >
            Hidden
          </ListLink>
        </NavTabs>
      }
      title="Manage Environments"
    >
      <SettingsPageHeading
        className="css-xtfhnp-StyledSettingsPageHeading e1uay4fd4"
        noTitleStyles={false}
        tabs={
          <NavTabs
            underlined={true}
          >
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/"
            >
              Environments
            </ListLink>
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/hidden/"
            >
              Hidden
            </ListLink>
          </NavTabs>
        }
        title="Manage Environments"
      >
        <div
          className="css-xtfhnp-StyledSettingsPageHeading e1uay4fd4"
        >
          <TitleAndActions>
            <div
              className="css-ifzfc5-TitleAndActions e1uay4fd0"
            >
              <Title
                styled={false}
                tabs={
                  <NavTabs
                    underlined={true}
                  >
                    <ListLink
                      activeClassName="active"
                      index={true}
                      isActive={[Function]}
                      to="/org-slug/project-slug/settings/environments/"
                    >
                      Environments
                    </ListLink>
                    <ListLink
                      activeClassName="active"
                      index={true}
                      isActive={[Function]}
                      to="/org-slug/project-slug/settings/environments/hidden/"
                    >
                      Hidden
                    </ListLink>
                  </NavTabs>
                }
              >
                <div
                  className="css-aqgf1z-Title e1uay4fd1"
                >
                  <HeaderTitle>
                    <h4
                      className="css-1bosio6-HeaderTitle eqkydle2"
                    >
                      Manage Environments
                    </h4>
                  </HeaderTitle>
                </div>
              </Title>
            </div>
          </TitleAndActions>
          <div>
            <NavTabs
              underlined={true}
            >
              <ul
                className="nav nav-tabs border-bottom"
              >
                <ListLink
                  activeClassName="active"
                  index={true}
                  isActive={[Function]}
                  to="/org-slug/project-slug/settings/environments/"
                >
                  <li
                    className="active"
                  >
                    <Link
                      onlyActiveOnIndex={true}
                      style={Object {}}
                      to="/org-slug/project-slug/settings/environments/"
                    >
                      <a
                        onClick={[Function]}
                        style={Object {}}
                      >
                        Environments
                      </a>
                    </Link>
                  </li>
                </ListLink>
                <ListLink
                  activeClassName="active"
                  index={true}
                  isActive={[Function]}
                  to="/org-slug/project-slug/settings/environments/hidden/"
                >
                  <li
                    className=""
                  >
                    <Link
                      onlyActiveOnIndex={true}
                      style={Object {}}
                      to="/org-slug/project-slug/settings/environments/hidden/"
                    >
                      <a
                        onClick={[Function]}
                        style={Object {}}
                      >
                        Hidden
                      </a>
                    </Link>
                  </li>
                </ListLink>
              </ul>
            </NavTabs>
          </div>
        </div>
      </SettingsPageHeading>
    </StyledSettingsPageHeading>
    <PermissionAlert
      access={
        Array [
          "project:write",
        ]
      }
    >
      <WithOrganizationMockWrapper
        access={
          Array [
            "project:write",
          ]
        }
      >
        <withConfig(Access)
          access={
            Array [
              "project:write",
            ]
          }
          organization={
            Object {
              "access": Array [
                "org:read",
                "org:write",
                "org:admin",
                "org:integrations",
                "project:read",
                "project:write",
                "project:admin",
                "team:read",
                "team:write",
                "team:admin",
              ],
              "features": Array [],
              "id": "3",
              "name": "Organization Name",
              "onboardingTasks": Array [],
              "projects": Array [],
              "scrapeJavaScript": true,
              "slug": "org-slug",
              "status": Object {
                "id": "active",
                "name": "active",
              },
              "teams": Array [],
            }
          }
        >
          <Access
            access={
              Array [
                "project:write",
              ]
            }
            config={
              Object {
                "features": Set {},
                "messages": Array [],
                "user": Object {
                  "email": "foo@example.com",
                  "flags": Object {
                    "newsletter_consent_prompt": false,
                  },
                  "hasPasswordAuth": true,
                  "id": "1",
                  "isAuthenticated": true,
                  "name": "Foo Bar",
                  "options": Object {
                    "timezone": "UTC",
                  },
                  "permissions": Set {},
                  "username": "foo@example.com",
                },
              }
            }
            isSuperuser={false}
            organization={
              Object {
                "access": Array [
                  "org:read",
                  "org:write",
                  "org:admin",
                  "org:integrations",
                  "project:read",
                  "project:write",
                  "project:admin",
                  "team:read",
                  "team:write",
                  "team:admin",
                ],
                "features": Array [],
                "id": "3",
                "name": "Organization Name",
                "onboardingTasks": Array [],
                "projects": Array [],
                "scrapeJavaScript": true,
                "slug": "org-slug",
                "status": Object {
                  "id": "active",
                  "name": "active",
                },
                "teams": Array [],
              }
            }
            renderNoAccessMessage={false}
            requireAll={true}
          />
        </withConfig(Access)>
      </WithOrganizationMockWrapper>
    </PermissionAlert>
    <Panel>
      <Component
        className="css-15hwgrz-Panel e119nu470"
      >
        <div
          className="css-15hwgrz-Panel e119nu470"
        >
          <PanelHeader>
            <div
              className="css-xaplc5-PanelHeader en8g1d30"
            >
              Active Environments
            </div>
          </PanelHeader>
          <PanelBody
            direction="column"
            disablePadding={true}
            flex={false}
          >
            <EmotionCssPropInternal
              __EMOTION_LABEL_PLEASE_DO_NOT_USE__="PanelBody"
              __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
              css={
                Object {
                  "map": "/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInRleHQudHN4Il0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUdZIiwiZmlsZSI6InRleHQudHN4Iiwic291cmNlc0NvbnRlbnQiOlsiaW1wb3J0IHtjc3N9IGZyb20gJ0BlbW90aW9uL2NvcmUnO1xuXG5jb25zdCB0ZXh0U3R5bGVzID0gKCkgPT4ge1xuICByZXR1cm4gY3NzYFxuICAgIC8qIHN0eWxlbGludC1kaXNhYmxlIG5vLWRlc2NlbmRpbmctc3BlY2lmaWNpdHkgKi9cbiAgICBoMSxcbiAgICBoMixcbiAgICBoMyxcbiAgICBoNCxcbiAgICBoNSxcbiAgICBoNixcbiAgICBwLFxuICAgIHVsLFxuICAgIG9sLFxuICAgIHRhYmxlLFxuICAgIGRsLFxuICAgIGJsb2NrcXVvdGUsXG4gICAgZm9ybSxcbiAgICBwcmUsXG4gICAgLmF1dG8tc2VsZWN0LXRleHQsXG4gICAgLnNlY3Rpb24sXG4gICAgW2NsYXNzXj0naGlnaGxpZ2h0LSddIHtcbiAgICAgIG1hcmdpbi1ib3R0b206IDIwcHg7XG5cbiAgICAgICY6bGFzdC1jaGlsZCB7XG4gICAgICAgIG1hcmdpbi1ib3R0b206IDA7XG4gICAgICB9XG4gICAgfVxuXG4gICAgaDEsXG4gICAgaDIsXG4gICAgaDMsXG4gICAgaDQsXG4gICAgaDUsXG4gICAgaDYge1xuICAgICAgbGluZS1oZWlnaHQ6IDEuMjtcbiAgICB9XG5cbiAgICBwLFxuICAgIHVsLFxuICAgIG9sLFxuICAgIGJsb2NrcXVvdGUge1xuICAgICAgbGluZS1oZWlnaHQ6IDEuNTtcbiAgICB9XG5cbiAgICBoMSB7XG4gICAgICBmb250LXNpemU6IDJlbTtcbiAgICB9XG5cbiAgICBoMiB7XG4gICAgICBmb250LXNpemU6IDEuNzVlbTtcbiAgICB9XG5cbiAgICBoMyB7XG4gICAgICBmb250LXNpemU6IDEuNWVtO1xuICAgIH1cblxuICAgIGg0IHtcbiAgICAgIGZvbnQtc2l6ZTogMS4yNWVtO1xuICAgIH1cblxuICAgIGg1IHtcbiAgICAgIGZvbnQtc2l6ZTogMWVtO1xuICAgIH1cblxuICAgIHByZSB7XG4gICAgICB3b3JkLWJyZWFrOiBicmVhay1hbGw7XG4gICAgICB3aGl0ZS1zcGFjZTogcHJlLXdyYXA7XG4gICAgfVxuICAgIC8qIHN0eWxlbGludC1lbmFibGUgKi9cbiAgYDtcbn07XG5cbmV4cG9ydCBkZWZhdWx0IHRleHRTdHlsZXM7XG4iXX0= */",
                  "name": "7uw193-PanelBody",
                  "next": undefined,
                  "styles": "h1,h2,h3,h4,h5,h6,p,ul,ol,table,dl,blockquote,form,pre,.auto-select-text,.section,[class^='highlight-']{margin-bottom:20px;&:last-child{margin-bottom:0;}}h1,h2,h3,h4,h5,h6{line-height:1.2;}p,ul,ol,blockquote{line-height:1.5;}h1{font-size:2em;}h2{font-size:1.75em;}h3{font-size:1.5em;}h4{font-size:1.25em;}h5{font-size:1em;}pre{word-break:break-all;white-space:pre-wrap;};;label:PanelBody;/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInBhbmVsQm9keS5qc3giXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBbUJNIiwiZmlsZSI6InBhbmVsQm9keS5qc3giLCJzb3VyY2VzQ29udGVudCI6WyJpbXBvcnQge2Nzc30gZnJvbSAnQGVtb3Rpb24vY29yZSc7XG5pbXBvcnQge0ZsZXh9IGZyb20gJ0ByZWJhc3MvZ3JpZC9lbW90aW9uJztcbmltcG9ydCBQcm9wVHlwZXMgZnJvbSAncHJvcC10eXBlcyc7XG5pbXBvcnQgUmVhY3QgZnJvbSAncmVhY3QnO1xuXG5pbXBvcnQgc3BhY2UgZnJvbSAnYXBwL3N0eWxlcy9zcGFjZSc7XG5pbXBvcnQgdGV4dFN0eWxlcyBmcm9tICdhcHAvc3R5bGVzL3RleHQnO1xuXG5jb25zdCBQYW5lbEJvZHkgPSAoe2Rpc2FibGVQYWRkaW5nLCBmbGV4LCBkaXJlY3Rpb24sIC4uLnByb3BzfSkgPT4ge1xuICBjb25zdCBwYWRkaW5nID0gIWRpc2FibGVQYWRkaW5nXG4gICAgPyBjc3NgXG4gICAgICAgIHBhZGRpbmc6ICR7c3BhY2UoMil9O1xuICAgICAgYFxuICAgIDogJyc7XG4gIGNvbnN0IGZsZXhEaXJlY3Rpb24gPSBmbGV4ID8gZGlyZWN0aW9uIDogdW5kZWZpbmVkO1xuICBjb25zdCBDb21wID0gZmxleCA/IEZsZXggOiAnZGl2JztcblxuICByZXR1cm4gKFxuICAgIDxDb21wXG4gICAgICBjc3M9e1t0ZXh0U3R5bGVzKHByb3BzKSwgcGFkZGluZ119XG4gICAgICB7Li4ucHJvcHN9XG4gICAgICB7Li4uKGZsZXhEaXJlY3Rpb24gPyB7ZmxleERpcmVjdGlvbn0gOiBudWxsKX1cbiAgICAvPlxuICApO1xufTtcblxuUGFuZWxCb2R5LnByb3BUeXBlcyA9IHtcbiAgZmxleDogUHJvcFR5cGVzLmJvb2wsXG4gIGRpcmVjdGlvbjogUHJvcFR5cGVzLnN0cmluZyxcbiAgZGlzYWJsZVBhZGRpbmc6IFByb3BUeXBlcy5ib29sLFxufTtcblxuUGFuZWxCb2R5LmRlZmF1bHRQcm9wcyA9IHtcbiAgZmxleDogZmFsc2UsXG4gIGRpcmVjdGlvbjogJ2NvbHVtbicsXG4gIGRpc2FibGVQYWRkaW5nOiB0cnVlLFxufTtcblxuZXhwb3J0IGRlZmF1bHQgUGFuZWxCb2R5O1xuIl19 */",
                  "toString": [Function],
                }
              }
            >
              <div
                className="css-7uw193-PanelBody"
              >
                <EmptyMessage>
                  <Component
                    className="css-1scmenn-EmptyMessage e1h3yfdx4"
                  >
                    <div
                      className="css-1scmenn-EmptyMessage e1h3yfdx4"
                      data-test-id="empty-message"
                    >
                      <Description
                        noMargin={true}
                      >
                        <div
                          className="css-1xokhf4-TextBlock-Description e1h3yfdx0"
                        >
                          You don't have any environments yet.
                        </div>
                      </Description>
                    </div>
                  </Component>
                </EmptyMessage>
              </div>
            </EmotionCssPropInternal>
          </PanelBody>
        </div>
      </Component>
    </Panel>
  </div>
</ProjectEnvironments>
`;

exports[`ProjectEnvironments render hidden renders empty message 1`] = `
<ProjectEnvironments
  api={
    Client {
      "_chain": [Function],
      "_wrapRequest": [Function],
      "bulkUpdate": [Function],
      "handleRequestError": [Function],
      "hasProjectBeenRenamed": [Function],
    }
  }
  location={
    Object {
      "pathname": "environments/hidden/",
    }
  }
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
  routes={Array []}
>
  <div>
    <SentryDocumentTitle
      objSlug="project-slug"
      title="Environments"
    >
      <SideEffect(DocumentTitle)
        title="Environments - project-slug - Sentry"
      >
        <DocumentTitle
          title="Environments - project-slug - Sentry"
        />
      </SideEffect(DocumentTitle)>
    </SentryDocumentTitle>
    <StyledSettingsPageHeading
      noTitleStyles={false}
      tabs={
        <NavTabs
          underlined={true}
        >
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/"
          >
            Environments
          </ListLink>
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/hidden/"
          >
            Hidden
          </ListLink>
        </NavTabs>
      }
      title="Manage Environments"
    >
      <SettingsPageHeading
        className="css-xtfhnp-StyledSettingsPageHeading e1uay4fd4"
        noTitleStyles={false}
        tabs={
          <NavTabs
            underlined={true}
          >
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/"
            >
              Environments
            </ListLink>
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/hidden/"
            >
              Hidden
            </ListLink>
          </NavTabs>
        }
        title="Manage Environments"
      >
        <div
          className="css-xtfhnp-StyledSettingsPageHeading e1uay4fd4"
        >
          <TitleAndActions>
            <div
              className="css-ifzfc5-TitleAndActions e1uay4fd0"
            >
              <Title
                styled={false}
                tabs={
                  <NavTabs
                    underlined={true}
                  >
                    <ListLink
                      activeClassName="active"
                      index={true}
                      isActive={[Function]}
                      to="/org-slug/project-slug/settings/environments/"
                    >
                      Environments
                    </ListLink>
                    <ListLink
                      activeClassName="active"
                      index={true}
                      isActive={[Function]}
                      to="/org-slug/project-slug/settings/environments/hidden/"
                    >
                      Hidden
                    </ListLink>
                  </NavTabs>
                }
              >
                <div
                  className="css-aqgf1z-Title e1uay4fd1"
                >
                  <HeaderTitle>
                    <h4
                      className="css-1bosio6-HeaderTitle eqkydle2"
                    >
                      Manage Environments
                    </h4>
                  </HeaderTitle>
                </div>
              </Title>
            </div>
          </TitleAndActions>
          <div>
            <NavTabs
              underlined={true}
            >
              <ul
                className="nav nav-tabs border-bottom"
              >
                <ListLink
                  activeClassName="active"
                  index={true}
                  isActive={[Function]}
                  to="/org-slug/project-slug/settings/environments/"
                >
                  <li
                    className=""
                  >
                    <Link
                      onlyActiveOnIndex={true}
                      style={Object {}}
                      to="/org-slug/project-slug/settings/environments/"
                    >
                      <a
                        onClick={[Function]}
                        style={Object {}}
                      >
                        Environments
                      </a>
                    </Link>
                  </li>
                </ListLink>
                <ListLink
                  activeClassName="active"
                  index={true}
                  isActive={[Function]}
                  to="/org-slug/project-slug/settings/environments/hidden/"
                >
                  <li
                    className="active"
                  >
                    <Link
                      onlyActiveOnIndex={true}
                      style={Object {}}
                      to="/org-slug/project-slug/settings/environments/hidden/"
                    >
                      <a
                        onClick={[Function]}
                        style={Object {}}
                      >
                        Hidden
                      </a>
                    </Link>
                  </li>
                </ListLink>
              </ul>
            </NavTabs>
          </div>
        </div>
      </SettingsPageHeading>
    </StyledSettingsPageHeading>
    <PermissionAlert
      access={
        Array [
          "project:write",
        ]
      }
    >
      <WithOrganizationMockWrapper
        access={
          Array [
            "project:write",
          ]
        }
      >
        <withConfig(Access)
          access={
            Array [
              "project:write",
            ]
          }
          organization={
            Object {
              "access": Array [
                "org:read",
                "org:write",
                "org:admin",
                "org:integrations",
                "project:read",
                "project:write",
                "project:admin",
                "team:read",
                "team:write",
                "team:admin",
              ],
              "features": Array [],
              "id": "3",
              "name": "Organization Name",
              "onboardingTasks": Array [],
              "projects": Array [],
              "scrapeJavaScript": true,
              "slug": "org-slug",
              "status": Object {
                "id": "active",
                "name": "active",
              },
              "teams": Array [],
            }
          }
        >
          <Access
            access={
              Array [
                "project:write",
              ]
            }
            config={
              Object {
                "features": Set {},
                "messages": Array [],
                "user": Object {
                  "email": "foo@example.com",
                  "flags": Object {
                    "newsletter_consent_prompt": false,
                  },
                  "hasPasswordAuth": true,
                  "id": "1",
                  "isAuthenticated": true,
                  "name": "Foo Bar",
                  "options": Object {
                    "timezone": "UTC",
                  },
                  "permissions": Set {},
                  "username": "foo@example.com",
                },
              }
            }
            isSuperuser={false}
            organization={
              Object {
                "access": Array [
                  "org:read",
                  "org:write",
                  "org:admin",
                  "org:integrations",
                  "project:read",
                  "project:write",
                  "project:admin",
                  "team:read",
                  "team:write",
                  "team:admin",
                ],
                "features": Array [],
                "id": "3",
                "name": "Organization Name",
                "onboardingTasks": Array [],
                "projects": Array [],
                "scrapeJavaScript": true,
                "slug": "org-slug",
                "status": Object {
                  "id": "active",
                  "name": "active",
                },
                "teams": Array [],
              }
            }
            renderNoAccessMessage={false}
            requireAll={true}
          />
        </withConfig(Access)>
      </WithOrganizationMockWrapper>
    </PermissionAlert>
    <Panel>
      <Component
        className="css-15hwgrz-Panel e119nu470"
      >
        <div
          className="css-15hwgrz-Panel e119nu470"
        >
          <PanelHeader>
            <div
              className="css-xaplc5-PanelHeader en8g1d30"
            >
              Hidden
            </div>
          </PanelHeader>
          <PanelBody
            direction="column"
            disablePadding={true}
            flex={false}
          >
            <EmotionCssPropInternal
              __EMOTION_LABEL_PLEASE_DO_NOT_USE__="PanelBody"
              __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
              css={
                Object {
                  "map": "/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInRleHQudHN4Il0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUdZIiwiZmlsZSI6InRleHQudHN4Iiwic291cmNlc0NvbnRlbnQiOlsiaW1wb3J0IHtjc3N9IGZyb20gJ0BlbW90aW9uL2NvcmUnO1xuXG5jb25zdCB0ZXh0U3R5bGVzID0gKCkgPT4ge1xuICByZXR1cm4gY3NzYFxuICAgIC8qIHN0eWxlbGludC1kaXNhYmxlIG5vLWRlc2NlbmRpbmctc3BlY2lmaWNpdHkgKi9cbiAgICBoMSxcbiAgICBoMixcbiAgICBoMyxcbiAgICBoNCxcbiAgICBoNSxcbiAgICBoNixcbiAgICBwLFxuICAgIHVsLFxuICAgIG9sLFxuICAgIHRhYmxlLFxuICAgIGRsLFxuICAgIGJsb2NrcXVvdGUsXG4gICAgZm9ybSxcbiAgICBwcmUsXG4gICAgLmF1dG8tc2VsZWN0LXRleHQsXG4gICAgLnNlY3Rpb24sXG4gICAgW2NsYXNzXj0naGlnaGxpZ2h0LSddIHtcbiAgICAgIG1hcmdpbi1ib3R0b206IDIwcHg7XG5cbiAgICAgICY6bGFzdC1jaGlsZCB7XG4gICAgICAgIG1hcmdpbi1ib3R0b206IDA7XG4gICAgICB9XG4gICAgfVxuXG4gICAgaDEsXG4gICAgaDIsXG4gICAgaDMsXG4gICAgaDQsXG4gICAgaDUsXG4gICAgaDYge1xuICAgICAgbGluZS1oZWlnaHQ6IDEuMjtcbiAgICB9XG5cbiAgICBwLFxuICAgIHVsLFxuICAgIG9sLFxuICAgIGJsb2NrcXVvdGUge1xuICAgICAgbGluZS1oZWlnaHQ6IDEuNTtcbiAgICB9XG5cbiAgICBoMSB7XG4gICAgICBmb250LXNpemU6IDJlbTtcbiAgICB9XG5cbiAgICBoMiB7XG4gICAgICBmb250LXNpemU6IDEuNzVlbTtcbiAgICB9XG5cbiAgICBoMyB7XG4gICAgICBmb250LXNpemU6IDEuNWVtO1xuICAgIH1cblxuICAgIGg0IHtcbiAgICAgIGZvbnQtc2l6ZTogMS4yNWVtO1xuICAgIH1cblxuICAgIGg1IHtcbiAgICAgIGZvbnQtc2l6ZTogMWVtO1xuICAgIH1cblxuICAgIHByZSB7XG4gICAgICB3b3JkLWJyZWFrOiBicmVhay1hbGw7XG4gICAgICB3aGl0ZS1zcGFjZTogcHJlLXdyYXA7XG4gICAgfVxuICAgIC8qIHN0eWxlbGludC1lbmFibGUgKi9cbiAgYDtcbn07XG5cbmV4cG9ydCBkZWZhdWx0IHRleHRTdHlsZXM7XG4iXX0= */",
                  "name": "7uw193-PanelBody",
                  "next": undefined,
                  "styles": "h1,h2,h3,h4,h5,h6,p,ul,ol,table,dl,blockquote,form,pre,.auto-select-text,.section,[class^='highlight-']{margin-bottom:20px;&:last-child{margin-bottom:0;}}h1,h2,h3,h4,h5,h6{line-height:1.2;}p,ul,ol,blockquote{line-height:1.5;}h1{font-size:2em;}h2{font-size:1.75em;}h3{font-size:1.5em;}h4{font-size:1.25em;}h5{font-size:1em;}pre{word-break:break-all;white-space:pre-wrap;};;label:PanelBody;/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInBhbmVsQm9keS5qc3giXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBbUJNIiwiZmlsZSI6InBhbmVsQm9keS5qc3giLCJzb3VyY2VzQ29udGVudCI6WyJpbXBvcnQge2Nzc30gZnJvbSAnQGVtb3Rpb24vY29yZSc7XG5pbXBvcnQge0ZsZXh9IGZyb20gJ0ByZWJhc3MvZ3JpZC9lbW90aW9uJztcbmltcG9ydCBQcm9wVHlwZXMgZnJvbSAncHJvcC10eXBlcyc7XG5pbXBvcnQgUmVhY3QgZnJvbSAncmVhY3QnO1xuXG5pbXBvcnQgc3BhY2UgZnJvbSAnYXBwL3N0eWxlcy9zcGFjZSc7XG5pbXBvcnQgdGV4dFN0eWxlcyBmcm9tICdhcHAvc3R5bGVzL3RleHQnO1xuXG5jb25zdCBQYW5lbEJvZHkgPSAoe2Rpc2FibGVQYWRkaW5nLCBmbGV4LCBkaXJlY3Rpb24sIC4uLnByb3BzfSkgPT4ge1xuICBjb25zdCBwYWRkaW5nID0gIWRpc2FibGVQYWRkaW5nXG4gICAgPyBjc3NgXG4gICAgICAgIHBhZGRpbmc6ICR7c3BhY2UoMil9O1xuICAgICAgYFxuICAgIDogJyc7XG4gIGNvbnN0IGZsZXhEaXJlY3Rpb24gPSBmbGV4ID8gZGlyZWN0aW9uIDogdW5kZWZpbmVkO1xuICBjb25zdCBDb21wID0gZmxleCA/IEZsZXggOiAnZGl2JztcblxuICByZXR1cm4gKFxuICAgIDxDb21wXG4gICAgICBjc3M9e1t0ZXh0U3R5bGVzKHByb3BzKSwgcGFkZGluZ119XG4gICAgICB7Li4ucHJvcHN9XG4gICAgICB7Li4uKGZsZXhEaXJlY3Rpb24gPyB7ZmxleERpcmVjdGlvbn0gOiBudWxsKX1cbiAgICAvPlxuICApO1xufTtcblxuUGFuZWxCb2R5LnByb3BUeXBlcyA9IHtcbiAgZmxleDogUHJvcFR5cGVzLmJvb2wsXG4gIGRpcmVjdGlvbjogUHJvcFR5cGVzLnN0cmluZyxcbiAgZGlzYWJsZVBhZGRpbmc6IFByb3BUeXBlcy5ib29sLFxufTtcblxuUGFuZWxCb2R5LmRlZmF1bHRQcm9wcyA9IHtcbiAgZmxleDogZmFsc2UsXG4gIGRpcmVjdGlvbjogJ2NvbHVtbicsXG4gIGRpc2FibGVQYWRkaW5nOiB0cnVlLFxufTtcblxuZXhwb3J0IGRlZmF1bHQgUGFuZWxCb2R5O1xuIl19 */",
                  "toString": [Function],
                }
              }
            >
              <div
                className="css-7uw193-PanelBody"
              >
                <EmptyMessage>
                  <Component
                    className="css-1scmenn-EmptyMessage e1h3yfdx4"
                  >
                    <div
                      className="css-1scmenn-EmptyMessage e1h3yfdx4"
                      data-test-id="empty-message"
                    >
                      <Description
                        noMargin={true}
                      >
                        <div
                          className="css-1xokhf4-TextBlock-Description e1h3yfdx0"
                        >
                          You don't have any hidden environments.
                        </div>
                      </Description>
                    </div>
                  </Component>
                </EmptyMessage>
              </div>
            </EmotionCssPropInternal>
          </PanelBody>
        </div>
      </Component>
    </Panel>
  </div>
</ProjectEnvironments>
`;

exports[`ProjectEnvironments render hidden renders environment list 1`] = `
<ProjectEnvironments
  api={
    Client {
      "_chain": [Function],
      "_wrapRequest": [Function],
      "bulkUpdate": [Function],
      "handleRequestError": [Function],
      "hasProjectBeenRenamed": [Function],
    }
  }
  location={
    Object {
      "pathname": "environments/hidden/",
    }
  }
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
  routes={Array []}
>
  <div>
    <SentryDocumentTitle
      objSlug="project-slug"
      title="Environments"
    >
      <SideEffect(DocumentTitle)
        title="Environments - project-slug - Sentry"
      >
        <DocumentTitle
          title="Environments - project-slug - Sentry"
        />
      </SideEffect(DocumentTitle)>
    </SentryDocumentTitle>
    <StyledSettingsPageHeading
      noTitleStyles={false}
      tabs={
        <NavTabs
          underlined={true}
        >
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/"
          >
            Environments
          </ListLink>
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/hidden/"
          >
            Hidden
          </ListLink>
        </NavTabs>
      }
      title="Manage Environments"
    >
      <SettingsPageHeading
        className="css-xtfhnp-StyledSettingsPageHeading e1uay4fd4"
        noTitleStyles={false}
        tabs={
          <NavTabs
            underlined={true}
          >
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/"
            >
              Environments
            </ListLink>
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/hidden/"
            >
              Hidden
            </ListLink>
          </NavTabs>
        }
        title="Manage Environments"
      >
        <div
          className="css-xtfhnp-StyledSettingsPageHeading e1uay4fd4"
        >
          <TitleAndActions>
            <div
              className="css-ifzfc5-TitleAndActions e1uay4fd0"
            >
              <Title
                styled={false}
                tabs={
                  <NavTabs
                    underlined={true}
                  >
                    <ListLink
                      activeClassName="active"
                      index={true}
                      isActive={[Function]}
                      to="/org-slug/project-slug/settings/environments/"
                    >
                      Environments
                    </ListLink>
                    <ListLink
                      activeClassName="active"
                      index={true}
                      isActive={[Function]}
                      to="/org-slug/project-slug/settings/environments/hidden/"
                    >
                      Hidden
                    </ListLink>
                  </NavTabs>
                }
              >
                <div
                  className="css-aqgf1z-Title e1uay4fd1"
                >
                  <HeaderTitle>
                    <h4
                      className="css-1bosio6-HeaderTitle eqkydle2"
                    >
                      Manage Environments
                    </h4>
                  </HeaderTitle>
                </div>
              </Title>
            </div>
          </TitleAndActions>
          <div>
            <NavTabs
              underlined={true}
            >
              <ul
                className="nav nav-tabs border-bottom"
              >
                <ListLink
                  activeClassName="active"
                  index={true}
                  isActive={[Function]}
                  to="/org-slug/project-slug/settings/environments/"
                >
                  <li
                    className=""
                  >
                    <Link
                      onlyActiveOnIndex={true}
                      style={Object {}}
                      to="/org-slug/project-slug/settings/environments/"
                    >
                      <a
                        onClick={[Function]}
                        style={Object {}}
                      >
                        Environments
                      </a>
                    </Link>
                  </li>
                </ListLink>
                <ListLink
                  activeClassName="active"
                  index={true}
                  isActive={[Function]}
                  to="/org-slug/project-slug/settings/environments/hidden/"
                >
                  <li
                    className="active"
                  >
                    <Link
                      onlyActiveOnIndex={true}
                      style={Object {}}
                      to="/org-slug/project-slug/settings/environments/hidden/"
                    >
                      <a
                        onClick={[Function]}
                        style={Object {}}
                      >
                        Hidden
                      </a>
                    </Link>
                  </li>
                </ListLink>
              </ul>
            </NavTabs>
          </div>
        </div>
      </SettingsPageHeading>
    </StyledSettingsPageHeading>
    <PermissionAlert
      access={
        Array [
          "project:write",
        ]
      }
    >
      <WithOrganizationMockWrapper
        access={
          Array [
            "project:write",
          ]
        }
      >
        <withConfig(Access)
          access={
            Array [
              "project:write",
            ]
          }
          organization={
            Object {
              "access": Array [
                "org:read",
                "org:write",
                "org:admin",
                "org:integrations",
                "project:read",
                "project:write",
                "project:admin",
                "team:read",
                "team:write",
                "team:admin",
              ],
              "features": Array [],
              "id": "3",
              "name": "Organization Name",
              "onboardingTasks": Array [],
              "projects": Array [],
              "scrapeJavaScript": true,
              "slug": "org-slug",
              "status": Object {
                "id": "active",
                "name": "active",
              },
              "teams": Array [],
            }
          }
        >
          <Access
            access={
              Array [
                "project:write",
              ]
            }
            config={
              Object {
                "features": Set {},
                "messages": Array [],
                "user": Object {
                  "email": "foo@example.com",
                  "flags": Object {
                    "newsletter_consent_prompt": false,
                  },
                  "hasPasswordAuth": true,
                  "id": "1",
                  "isAuthenticated": true,
                  "name": "Foo Bar",
                  "options": Object {
                    "timezone": "UTC",
                  },
                  "permissions": Set {},
                  "username": "foo@example.com",
                },
              }
            }
            isSuperuser={false}
            organization={
              Object {
                "access": Array [
                  "org:read",
                  "org:write",
                  "org:admin",
                  "org:integrations",
                  "project:read",
                  "project:write",
                  "project:admin",
                  "team:read",
                  "team:write",
                  "team:admin",
                ],
                "features": Array [],
                "id": "3",
                "name": "Organization Name",
                "onboardingTasks": Array [],
                "projects": Array [],
                "scrapeJavaScript": true,
                "slug": "org-slug",
                "status": Object {
                  "id": "active",
                  "name": "active",
                },
                "teams": Array [],
              }
            }
            renderNoAccessMessage={false}
            requireAll={true}
          />
        </withConfig(Access)>
      </WithOrganizationMockWrapper>
    </PermissionAlert>
    <Panel>
      <Component
        className="css-15hwgrz-Panel e119nu470"
      >
        <div
          className="css-15hwgrz-Panel e119nu470"
        >
          <PanelHeader>
            <div
              className="css-xaplc5-PanelHeader en8g1d30"
            >
              Hidden
            </div>
          </PanelHeader>
          <PanelBody
            direction="column"
            disablePadding={true}
            flex={false}
          >
            <EmotionCssPropInternal
              __EMOTION_LABEL_PLEASE_DO_NOT_USE__="PanelBody"
              __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
              css={
                Object {
                  "map": "/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInRleHQudHN4Il0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUdZIiwiZmlsZSI6InRleHQudHN4Iiwic291cmNlc0NvbnRlbnQiOlsiaW1wb3J0IHtjc3N9IGZyb20gJ0BlbW90aW9uL2NvcmUnO1xuXG5jb25zdCB0ZXh0U3R5bGVzID0gKCkgPT4ge1xuICByZXR1cm4gY3NzYFxuICAgIC8qIHN0eWxlbGludC1kaXNhYmxlIG5vLWRlc2NlbmRpbmctc3BlY2lmaWNpdHkgKi9cbiAgICBoMSxcbiAgICBoMixcbiAgICBoMyxcbiAgICBoNCxcbiAgICBoNSxcbiAgICBoNixcbiAgICBwLFxuICAgIHVsLFxuICAgIG9sLFxuICAgIHRhYmxlLFxuICAgIGRsLFxuICAgIGJsb2NrcXVvdGUsXG4gICAgZm9ybSxcbiAgICBwcmUsXG4gICAgLmF1dG8tc2VsZWN0LXRleHQsXG4gICAgLnNlY3Rpb24sXG4gICAgW2NsYXNzXj0naGlnaGxpZ2h0LSddIHtcbiAgICAgIG1hcmdpbi1ib3R0b206IDIwcHg7XG5cbiAgICAgICY6bGFzdC1jaGlsZCB7XG4gICAgICAgIG1hcmdpbi1ib3R0b206IDA7XG4gICAgICB9XG4gICAgfVxuXG4gICAgaDEsXG4gICAgaDIsXG4gICAgaDMsXG4gICAgaDQsXG4gICAgaDUsXG4gICAgaDYge1xuICAgICAgbGluZS1oZWlnaHQ6IDEuMjtcbiAgICB9XG5cbiAgICBwLFxuICAgIHVsLFxuICAgIG9sLFxuICAgIGJsb2NrcXVvdGUge1xuICAgICAgbGluZS1oZWlnaHQ6IDEuNTtcbiAgICB9XG5cbiAgICBoMSB7XG4gICAgICBmb250LXNpemU6IDJlbTtcbiAgICB9XG5cbiAgICBoMiB7XG4gICAgICBmb250LXNpemU6IDEuNzVlbTtcbiAgICB9XG5cbiAgICBoMyB7XG4gICAgICBmb250LXNpemU6IDEuNWVtO1xuICAgIH1cblxuICAgIGg0IHtcbiAgICAgIGZvbnQtc2l6ZTogMS4yNWVtO1xuICAgIH1cblxuICAgIGg1IHtcbiAgICAgIGZvbnQtc2l6ZTogMWVtO1xuICAgIH1cblxuICAgIHByZSB7XG4gICAgICB3b3JkLWJyZWFrOiBicmVhay1hbGw7XG4gICAgICB3aGl0ZS1zcGFjZTogcHJlLXdyYXA7XG4gICAgfVxuICAgIC8qIHN0eWxlbGludC1lbmFibGUgKi9cbiAgYDtcbn07XG5cbmV4cG9ydCBkZWZhdWx0IHRleHRTdHlsZXM7XG4iXX0= */",
                  "name": "7uw193-PanelBody",
                  "next": undefined,
                  "styles": "h1,h2,h3,h4,h5,h6,p,ul,ol,table,dl,blockquote,form,pre,.auto-select-text,.section,[class^='highlight-']{margin-bottom:20px;&:last-child{margin-bottom:0;}}h1,h2,h3,h4,h5,h6{line-height:1.2;}p,ul,ol,blockquote{line-height:1.5;}h1{font-size:2em;}h2{font-size:1.75em;}h3{font-size:1.5em;}h4{font-size:1.25em;}h5{font-size:1em;}pre{word-break:break-all;white-space:pre-wrap;};;label:PanelBody;/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInBhbmVsQm9keS5qc3giXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBbUJNIiwiZmlsZSI6InBhbmVsQm9keS5qc3giLCJzb3VyY2VzQ29udGVudCI6WyJpbXBvcnQge2Nzc30gZnJvbSAnQGVtb3Rpb24vY29yZSc7XG5pbXBvcnQge0ZsZXh9IGZyb20gJ0ByZWJhc3MvZ3JpZC9lbW90aW9uJztcbmltcG9ydCBQcm9wVHlwZXMgZnJvbSAncHJvcC10eXBlcyc7XG5pbXBvcnQgUmVhY3QgZnJvbSAncmVhY3QnO1xuXG5pbXBvcnQgc3BhY2UgZnJvbSAnYXBwL3N0eWxlcy9zcGFjZSc7XG5pbXBvcnQgdGV4dFN0eWxlcyBmcm9tICdhcHAvc3R5bGVzL3RleHQnO1xuXG5jb25zdCBQYW5lbEJvZHkgPSAoe2Rpc2FibGVQYWRkaW5nLCBmbGV4LCBkaXJlY3Rpb24sIC4uLnByb3BzfSkgPT4ge1xuICBjb25zdCBwYWRkaW5nID0gIWRpc2FibGVQYWRkaW5nXG4gICAgPyBjc3NgXG4gICAgICAgIHBhZGRpbmc6ICR7c3BhY2UoMil9O1xuICAgICAgYFxuICAgIDogJyc7XG4gIGNvbnN0IGZsZXhEaXJlY3Rpb24gPSBmbGV4ID8gZGlyZWN0aW9uIDogdW5kZWZpbmVkO1xuICBjb25zdCBDb21wID0gZmxleCA/IEZsZXggOiAnZGl2JztcblxuICByZXR1cm4gKFxuICAgIDxDb21wXG4gICAgICBjc3M9e1t0ZXh0U3R5bGVzKHByb3BzKSwgcGFkZGluZ119XG4gICAgICB7Li4ucHJvcHN9XG4gICAgICB7Li4uKGZsZXhEaXJlY3Rpb24gPyB7ZmxleERpcmVjdGlvbn0gOiBudWxsKX1cbiAgICAvPlxuICApO1xufTtcblxuUGFuZWxCb2R5LnByb3BUeXBlcyA9IHtcbiAgZmxleDogUHJvcFR5cGVzLmJvb2wsXG4gIGRpcmVjdGlvbjogUHJvcFR5cGVzLnN0cmluZyxcbiAgZGlzYWJsZVBhZGRpbmc6IFByb3BUeXBlcy5ib29sLFxufTtcblxuUGFuZWxCb2R5LmRlZmF1bHRQcm9wcyA9IHtcbiAgZmxleDogZmFsc2UsXG4gIGRpcmVjdGlvbjogJ2NvbHVtbicsXG4gIGRpc2FibGVQYWRkaW5nOiB0cnVlLFxufTtcblxuZXhwb3J0IGRlZmF1bHQgUGFuZWxCb2R5O1xuIl19 */",
                  "toString": [Function],
                }
              }
            >
              <div
                className="css-7uw193-PanelBody"
              >
                <EnvironmentRow
                  actionText="Show"
                  environment={
                    Object {
                      "id": "1",
                      "isHidden": true,
                      "name": "zzz",
                    }
                  }
                  isHidden={true}
                  key="1"
                  name="zzz"
                  onHide={[Function]}
                  shouldShowAction={true}
                >
                  <PanelItem
                    alignItems="center"
                    justifyContent="space-between"
                    p={2}
                  >
                    <div
                      className="css-1fxaylf-PanelItem eo8n7lk0"
                    >
                      <Flex
                        alignItems="center"
                      >
                        <div
                          className="css-8jah14"
                        >
                          zzz
                        </div>
                      </Flex>
                      <WithOrganizationMockWrapper
                        access={
                          Array [
                            "project:write",
                          ]
                        }
                      >
                        <withConfig(Access)
                          access={
                            Array [
                              "project:write",
                            ]
                          }
                          organization={
                            Object {
                              "access": Array [
                                "org:read",
                                "org:write",
                                "org:admin",
                                "org:integrations",
                                "project:read",
                                "project:write",
                                "project:admin",
                                "team:read",
                                "team:write",
                                "team:admin",
                              ],
                              "features": Array [],
                              "id": "3",
                              "name": "Organization Name",
                              "onboardingTasks": Array [],
                              "projects": Array [],
                              "scrapeJavaScript": true,
                              "slug": "org-slug",
                              "status": Object {
                                "id": "active",
                                "name": "active",
                              },
                              "teams": Array [],
                            }
                          }
                        >
                          <Access
                            access={
                              Array [
                                "project:write",
                              ]
                            }
                            config={
                              Object {
                                "features": Set {},
                                "messages": Array [],
                                "user": Object {
                                  "email": "foo@example.com",
                                  "flags": Object {
                                    "newsletter_consent_prompt": false,
                                  },
                                  "hasPasswordAuth": true,
                                  "id": "1",
                                  "isAuthenticated": true,
                                  "name": "Foo Bar",
                                  "options": Object {
                                    "timezone": "UTC",
                                  },
                                  "permissions": Set {},
                                  "username": "foo@example.com",
                                },
                              }
                            }
                            isSuperuser={false}
                            organization={
                              Object {
                                "access": Array [
                                  "org:read",
                                  "org:write",
                                  "org:admin",
                                  "org:integrations",
                                  "project:read",
                                  "project:write",
                                  "project:admin",
                                  "team:read",
                                  "team:write",
                                  "team:admin",
                                ],
                                "features": Array [],
                                "id": "3",
                                "name": "Organization Name",
                                "onboardingTasks": Array [],
                                "projects": Array [],
                                "scrapeJavaScript": true,
                                "slug": "org-slug",
                                "status": Object {
                                  "id": "active",
                                  "name": "active",
                                },
                                "teams": Array [],
                              }
                            }
                            renderNoAccessMessage={false}
                            requireAll={true}
                          >
                            <div>
                              <EnvironmentButton
                                align="center"
                                disabled={false}
                                onClick={[Function]}
                                size="xsmall"
                              >
                                <Button
                                  align="center"
                                  className="css-1g4cmym-EnvironmentButton e1pnz46f0"
                                  disabled={false}
                                  onClick={[Function]}
                                  size="xsmall"
                                >
                                  <StyledButton
                                    aria-disabled={false}
                                    aria-label="Show"
                                    className="css-1g4cmym-EnvironmentButton e1pnz46f0"
                                    disabled={false}
                                    onClick={[Function]}
                                    role="button"
                                    size="xsmall"
                                  >
                                    <ForwardRef
                                      aria-disabled={false}
                                      aria-label="Show"
                                      className="e1pnz46f0 css-1nfir9e-StyledButton-EnvironmentButton edwq9my0"
                                      disabled={false}
                                      onClick={[Function]}
                                      role="button"
                                      size="xsmall"
                                    >
                                      <button
                                        aria-disabled={false}
                                        aria-label="Show"
                                        className="e1pnz46f0 css-1nfir9e-StyledButton-EnvironmentButton edwq9my0"
                                        onClick={[Function]}
                                        role="button"
                                        size="xsmall"
                                      >
                                        <ButtonLabel
                                          align="center"
                                          size="xsmall"
                                        >
                                          <Component
                                            align="center"
                                            className="css-cmi7y3-ButtonLabel edwq9my1"
                                            size="xsmall"
                                          >
                                            <span
                                              className="css-cmi7y3-ButtonLabel edwq9my1"
                                            >
                                              Show
                                            </span>
                                          </Component>
                                        </ButtonLabel>
                                      </button>
                                    </ForwardRef>
                                  </StyledButton>
                                </Button>
                              </EnvironmentButton>
                            </div>
                          </Access>
                        </withConfig(Access)>
                      </WithOrganizationMockWrapper>
                    </div>
                  </PanelItem>
                </EnvironmentRow>
              </div>
            </EmotionCssPropInternal>
          </PanelBody>
        </div>
      </Component>
    </Panel>
  </div>
</ProjectEnvironments>
`;
